<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_provider_description">Provider of demactor to access data</string>
    <string name="app_provider_name">Provider of demactor</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Del</string>
    <string name="common_edit">Edit</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="menu_item_create">Add</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_save">Save</string>
    <string name="jockey_dfdfgdddfgdfg_invalid_field_error">Field DfdfgdDDfgdfg is invalid.</string>
    <string name="jockey_dfdfgdddfgdfg_label">DfdfgdDDfgdfg</string>
    <string name="jockey_dfgdfgdfgdffg_invalid_field_error">Field DfgdfgdfgdfFg is invalid.</string>
    <string name="jockey_dfgdfgdfgdffg_label">DfgdfgdfgdfFg</string>
    <string name="jockey_dzerzerbcze_dialog_title">Select dzerzerBCze</string>
    <string name="jockey_dzerzerbcze_invalid_field_error">Field DzerzerBCze is invalid.</string>
    <string name="jockey_dzerzerbcze_label">DzerzerBCze</string>
    <string name="jockey_empty_list">Jockey list is empty !</string>
    <string name="jockey_error_create">Jockey creation errorâ€¦</string>
    <string name="jockey_error_edit">Jockey edition errorâ€¦</string>
    <string name="jockey_iuytrezba_dialog_title">Select iuytrezBa</string>
    <string name="jockey_iuytrezba_invalid_field_error">Field IuytrezBa is invalid.</string>
    <string name="jockey_iuytrezba_label">IuytrezBa</string>
    <string name="jockey_not_found">No Jockey found to displayâ€¦</string>
    <string name="jockey_progress_load_message">Jockey is loadingâ€¦</string>
    <string name="jockey_progress_load_relations_message">Jockey related entities are loading...</string>
    <string name="jockey_progress_load_relations_title">Jockey related entities loading</string>
    <string name="jockey_progress_load_title">Jockey Loading progress</string>
    <string name="jockey_progress_save_message">Jockey is saving to databaseâ€¦</string>
    <string name="jockey_progress_save_title">Jockey save progress</string>
    <string name="poney_empty_list">Poney list is empty !</string>
    <string name="poney_error_create">Poney creation errorâ€¦</string>
    <string name="poney_error_edit">Poney edition errorâ€¦</string>
    <string name="poney_iomaiome1_invalid_field_error">Field IomAiome1 is invalid.</string>
    <string name="poney_iomaiome1_label">IomAiome1</string>
    <string name="poney_jockgfhjeys1_dialog_title">Select jockgFhjeys1</string>
    <string name="poney_jockgfhjeys1_invalid_field_error">Field JockgFhjeys1 is invalid.</string>
    <string name="poney_jockgfhjeys1_label">JockgFhjeys1</string>
    <string name="poney_not_found">No Poney found to displayâ€¦</string>
    <string name="poney_progress_load_message">Poney is loadingâ€¦</string>
    <string name="poney_progress_load_relations_message">Poney related entities are loading...</string>
    <string name="poney_progress_load_relations_title">Poney related entities loading</string>
    <string name="poney_progress_load_title">Poney Loading progress</string>
    <string name="poney_progress_save_message">Poney is saving to databaseâ€¦</string>
    <string name="poney_progress_save_title">Poney save progress</string>
    <string name="poney_scorvbnbe1_dialog_title">Select scorvbnBe1</string>
    <string name="poney_scorvbnbe1_invalid_field_error">Field ScorvbnBe1 is invalid.</string>
    <string name="poney_scorvbnbe1_label">ScorvbnBe1</string>
    <string name="score_empty_list">Score list is empty !</string>
    <string name="score_error_create">Score creation errorâ€¦</string>
    <string name="score_error_edit">Score edition errorâ€¦</string>
    <string name="score_monefghfgy1_invalid_field_error">Field MoneFGHFGy1 is invalid.</string>
    <string name="score_monefghfgy1_label">MoneFGHFGy1</string>
    <string name="score_not_found">No Score found to displayâ€¦</string>
    <string name="score_ponrtyeys1_dialog_title">Select ponRTYeys1</string>
    <string name="score_ponrtyeys1_invalid_field_error">Field PonRTYeys1 is invalid.</string>
    <string name="score_ponrtyeys1_label">PonRTYeys1</string>
    <string name="score_progress_load_message">Score is loadingâ€¦</string>
    <string name="score_progress_load_relations_message">Score related entities are loading...</string>
    <string name="score_progress_load_relations_title">Score related entities loading</string>
    <string name="score_progress_load_title">Score Loading progress</string>
    <string name="score_progress_save_message">Score is saving to databaseâ€¦</string>
    <string name="score_progress_save_title">Score save progress</string>
    <string name="score_useghhnrs1_dialog_title">Select useGHHNrs1</string>
    <string name="score_useghhnrs1_invalid_field_error">Field UseGHHNrs1 is invalid.</string>
    <string name="score_useghhnrs1_label">UseGHHNrs1</string>
    <string name="uri_not_supported">URI not supported</string>
    <string name="user_empty_list">User list is empty !</string>
    <string name="user_error_create">User creation errorâ€¦</string>
    <string name="user_error_edit">User edition errorâ€¦</string>
    <string name="user_jocfghkey1_dialog_title">Select jocFGHkey1</string>
    <string name="user_jocfghkey1_invalid_field_error">Field JocFGHkey1 is invalid.</string>
    <string name="user_jocfghkey1_label">JocFGHkey1</string>
    <string name="user_nafghme1_invalid_field_error">Field NaFGHme1 is invalid.</string>
    <string name="user_nafghme1_label">NaFGHme1</string>
    <string name="user_not_found">No User found to displayâ€¦</string>
    <string name="user_progress_load_message">User is loadingâ€¦</string>
    <string name="user_progress_load_relations_message">User related entities are loading...</string>
    <string name="user_progress_load_relations_title">User related entities loading</string>
    <string name="user_progress_load_title">User Loading progress</string>
    <string name="user_progress_save_message">User is saving to databaseâ€¦</string>
    <string name="user_progress_save_title">User save progress</string>
    <string name="user_scofghre1_dialog_title">Select scoFGHre1</string>
    <string name="user_scofghre1_invalid_field_error">Field ScoFGHre1 is invalid.</string>
    <string name="user_scofghre1_label">ScoFGHre1</string>
    <string name="user_surnfghame1_invalid_field_error">Field SurnFGHame1 is invalid.</string>
    <string name="user_surnfghame1_label">SurnFGHame1</string>
</resources>
