<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:id="@+id/user_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >
            <TextView
                android:id="@+id/user_nafghme1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_nafghme1_label"/>
            <TextView
                android:id="@+id/user_nafghme1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/user_nafghme1_label" />
            <TextView
                android:id="@+id/user_surnfghame1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_nafghme1"
                android:text="@string/user_surnfghame1_label"/>
            <TextView
                android:id="@+id/user_surnfghame1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/user_surnfghame1_label" />
            <TextView
                android:id="@+id/user_scofghre1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_surnfghame1"
                android:text="@string/user_scofghre1_label"/>
            <TextView
                android:id="@+id/user_scofghre1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/user_scofghre1_label" />
            <TextView
                android:id="@+id/user_jocfghkey1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_scofghre1"
                android:text="@string/user_jocfghkey1_label"/>
            <TextView
                android:id="@+id/user_jocfghkey1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/user_jocfghkey1_label" />
        </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/user_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/user_not_found" />
</RelativeLayout>
